[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphere_walk"
version = "0.1.0"
description = "A Brownian motion and random walk package on the 2-sphere"
authors = [
    {name = "Romain Simon", email = "romainljsimon@gmail.com"}
]
license = {text = "MIT"}
dependencies = [
    "numpy",
    "numba",
    "pyarrow",
    "toml"
]
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
repository = "https://github.com/romainljsimon/sphere_walk/"

